--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
         </header>
 
         <main>
+            <section id="hero">
+                <div id="intro">
+                    <h1>Hi. I'm Aqsa.</h1>
+                    <p>I'm a Computer Science student at Aston University, with a passion for web development and software engineering.</p>
+                </div>
+                <div>
+                    <p> Want to learn more? Keep scrolling!</p>
+                    <img src="\images\downwards-arrow.png">
+                </div>
+            </section>
         </main>
 
         <footer>
